# SKS_pulseHr

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TECHNICAL_OVERVIEW.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260608_0001_create_users_and_refresh_tokens.py  20260608_0002_create_survey_domain.py  20260609_0003_add_notification_queue.py  8af457bb0b8c_add_layout_fields_to_question_model.py
app/: admin.py  main.py
app/api/: analytics.py  auth.py  exports.py  notifications.py  questions.py  responses.py  router.py  survey_logic.py  surveys.py  users.py
app/core/: config.py  dependencies.py  security.py
app/db/: redis.py  session.py
app/models/: __init__.py  auth.py  export.py  notification.py  question.py  response.py  survey.py  survey_logic.py  user.py
app/repositories/: auth_repository.py  notification_repository.py  response_repository.py  survey_repository.py  user_repository.py
app/schemas/: analytics.py  auth.py  export.py  notification.py  question.py  response.py  survey.py  survey_logic.py  user.py
app/services/: analytics_service.py  auth_service.py  export_service.py  notification_service.py  question_service.py  response_service.py  survey_logic_service.py  survey_service.py  user_service.py
app/templates/sqladmin/: login.html
app/workers/: __init__.py  notification_worker.py  sms_stub.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  styles.css
outputs/: pulsehr_backend_full_code.md
(+19 files in other folders)
