[project]
name = "pulsehr-backend"
version = "0.1.0"
description = "PulseHR backend MVP"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "fastapi==0.136.3",
    "greenlet==3.1.1",
    "itsdangerous==2.2.0",
    "openpyxl==3.1.5",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pyjwt==2.9.0",
    "python-dotenv==1.0.1",
    "redis==5.0.8",
    "sqladmin==0.27.2",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6"
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.8"
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
